# endendend

./: .env  BACKEND_IMPROVEMENTS.md  INSTALLATION.md  Makefile  README.md  docker-compose-track2.yml  docker-compose.ros2.yml  docker-compose.vision.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright-fixture.ts  playwright.config.emptytest.ts  playwright.config.ts  pnpm-lock.yaml  requirements-coord.txt  tailwind.config.ts  train_sar.py  train_yolov8.py  tsconfig.app.tsbuildinfo  vite.config.ts
colcon_ws/: README.ros2.md
colcon_ws/src/endendend_core/: package.xml  setup.cfg  setup.py
colcon_ws/src/endendend_core/endendend_core/: __init__.py  qos_profiles.py  relay_chain_node.py  swarm_state_aggregator.py  vertex_p2p_sync.py  vertex_ros_bridge.py  vertex_swarm_fsm.py  vertex_yasmin_fsm.py  yasmin_swarm_fsm.py
colcon_ws/src/endendend_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/endendend_msgs/msg/: DroneState.msg  Heartbeat.msg  SwarmGlobalState.msg  VictimDetection.msg
colcon_ws/src/endendend_msgs/srv/: InjectFailure.srv  KillDrone.srv  VertexElection.srv
colcon_ws/src/endendend_supervisor/: package.xml  setup.cfg  setup.py
colcon_ws/src/endendend_supervisor/endendend_supervisor/: network_emulator.py  supervisor_node.py
config/: default.yaml
controllers/: aerial_handoff_controller.py  auction_supervisor.py  ground_rover_controller.py  mission_supervisor.py
controllers/blind_handoff_emitter/: blind_handoff_emitter.py
controllers/dynamic_daisy_drone/: dynamic_daisy_drone.py
controllers/dynamic_daisy_emitter/: dynamic_daisy_emitter.py
controllers/fallen_comrade_controller/: fallen_comrade_controller.py
controllers/src/: __init__.py  chain_manager.py  (+10 more)
data/: collapse_scenarios.json  tunnel_profiles.json
dataset/: augment_real.py  data.yaml  data_sar_hybrid.yaml  gen_dataset.py  gen_victims.py  split_dataset.py
demo/: injection_ui.py  record_demo.sh  vertex_demo.sh
docker/: Dockerfile.ros2  ros2_entrypoint.bash  ros2_swarm.docker  vision.Dockerfile
docs/: ARCH.md  COORD-LOGIC.md  SETUP.md  VERTEX_P2P_STATE_SYNC_SPEC.md  architecture.md  gen_docs.py  monetization.md  roles.mmd  scenarios.md  state-machine.mmd  swarm-vibe-bft-consensus-prompt.md
e2e/: smoke.spec.ts
foxglove/: swarm_layout.json
launch/: docker_compose.ros2.yml  drone_template_launch.py  single_drone_launch.py  swarm_behaviors_launch.py  swarm_launch.py  swarm_track2_launch.py  vertex_bridge_launch.py  vision_launch.py  webots_blackout_launch.py  webots_supervisor_launch.py  webots_swarm_launch.py  yasmin_fsm_launch.py
mesh_survival/: __init__.py
playwright-report/: index.html
public/: blackout-demo-trace.json  script.js
ros2/src/tashi_core/: package.xml  setup.py
ros2/src/tashi_core/launch/: swarm_launch.py
ros2/src/tashi_core/tashi_core/: mission_manager_node.py
ros2/src/tashi_sim/: package.xml  setup.py
ros2/src/tashi_sim/tashi_sim/: sim_adapter_node.py
ros2/src/tashi_tools/: package.xml  setup.py
ros2/src/tashi_tools/tashi_tools/: diagnostics_node.py
ros2/src/tashi_vision/: package.xml  setup.py
ros2/src/tashi_vision/launch/: vision_swarm.launch.py
ros2/src/tashi_vision/tashi_vision/: _repo_path.py  vision_node.py  yolov8_swarm_vision_node.py
rviz2/: swarm.rviz
scripts/: generate_tunnel.py  make_dataset.sh  mockdata_generate.py  mockdata_handoff_ws.py  mockdata_ws_server.py  open-browser.mjs  run_5drone_p2p.py  run_headless.py  run_webots.sh
server/: stripe-billing.mjs
simulation/: README.txt
src/: App.tsx  AppProviders.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
supabase/: config.toml
swarm/: __init__.py  backend_service.py  benchmark_safety_latency.py  bft_pbft.py  bully_election.py  byzantine.py  byzantine_config.example.json  chain_manager.py  chain_manager_enhanced.py  config.py  demo_mesh_http.py  drone_controller.py  exploration.py  foxmq_integration.py  improved_foxmq.py  iot.py  logging_setup.py  lovable_cloud_sink.py  mesh_survival_bridge.py  metrics.py  network_emulation_config.py  network_emulator.py  network_simulator.py  p2p_server.py  partition_handler.py  persist.py  robot_proto.py  ros_vision_client.py  routing.py  run_scalability_test.py  sar_vertex_foxmq_backend.py  scenario.example.json  scenario_dynamic_daisy_chain.py  serialization.py  target_manager.py  vertex_node.py  webots_controller.py
test/: test_dynamic_daisy_webots_engine.py  test_ros2_swarm.py  test_webots_utils.py
test-results/: .last-run.json
tests/: golden_scenarios.py  test_blind_handoff_engine.py  test_dataset.py  test_mesh_survival_core.py  test_state_machine.py  test_vision_swarm.py
vertex_swarm/: __init__.py
vision/: __init__.py  detection_to_state.py  detection_to_vertex.py  vertex_victim_handler.py  victim_tracker.py  webots_camera_driver.py  yolo_onnx.py  yolov8_detector.py
webots/: __init__.py
worlds/: blackout_swarm.wbt  blackout_tunnel.wbt  blind_handoff_track2.wbt  dynamic_daisy_chain.wbt  fallen_comrade_track2.wbt  swarm_drone.proto  swarm_robot.proto  victim.proto  victim_dataset.world  victims.world
(+1028 files in other folders)
