<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>endendend_core</name>
  <version>0.1.0</version>
  <description>QoS profiles, YASMIN swarm FSM helpers, and Vertex/FoxMQ ROS bridge stubs.</description>
  <maintainer email="lucy@example.com">Lucy Low</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>endendend_msgs</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>yasmin_viewer</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
