<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>endendend_supervisor</name>
  <version>0.1.0</version>
  <description>Swarm supervisor: global state aggregation, kill service, Vertex election.</description>
  <maintainer email="lucy@example.com">Lucy Low</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>endendend_msgs</depend>
  <depend>endendend_core</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
