<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tashi_tools</name>
  <version>0.0.1</version>
  <description>Developer tools and diagnostics for Tashi Swarm</description>
  <maintainer email="lucy@example.com">Lucy Low</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>tashi_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
